# ccoli

./: .gitignore  AGENTS.md  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.runtime.yml  docker-compose.test.yml  pyproject.toml
.codex/: autonomous-loop.yaml
.github/: pull_request_template.md
.github/workflows/: docker-tests.yml
arduino/atom_echo_m5stack_esp32_ino/: atom_echo_m5stack_esp32_ino.ino  config.h  device_secrets.h.example  display_control.cpp  display_control.h  protocol.cpp  servo_control.cpp  servo_control.h
ccoli/: cli.py
docker/: Dockerfile.firmware  Dockerfile.test  docker-compose.mock-services.yml  docker-compose.test.yml
docker/server/: Dockerfile
docker/server-runtime/: Dockerfile
docker/sim-client/: Dockerfile  sim_client.py
docs/: AGENT_FEATURE_PLANNING.md  DOCKER_SETUP_AND_RUN.md  DOCKER_TEST_PLAN.md  PLANNING_TEMPLATE.md  PRD.md  PRD_TEMPLATE.md  PROJECT_RULES_CODEX.md  TELEGRAM_CHANNEL_GUIDE.md  ralph_poc_report.json
docs/integration/: ralph-autonomous-loop.md  ralph-compatibility.md
scripts/: autonomous_coding_loop.sh  evaluate_poc.py  run_docker_tests.sh  setup_codex_superpowers.sh
server/: config.yaml  config_loader.py  env.example  proactive_interaction.py  protocol.py  requirements-test.txt  server.py
server/src/: agent_mode.py  llm_client.py  memory_manager.py  robot_mode.py
server/tests/: client_sim_smoke.py  test_agent_mode.py  test_agent_scenarios.py  test_channel_telegram.py  test_cli_integration.py  test_cli_smoke.py  test_config_loader.py  test_core_modules.py  test_emotion_system.py  (+16 more)
(+18 files in other folders)
